# arrLP

./: .readthedocs.yaml  README.md  pyproject.toml
.ai/: structure.md
.dev/: add_dependency.bat  add_dependency.py  add_module.bat  add_module.py  add_script.bat  add_script.py  bump_majorversion.bat  bump_minorversion.bat  make_doc.bat  upload_newversion.bat  upload_newversion.py
.opencode/instructions/: docstrings.md  structure.md
docs/handwritten/: library_basics.rst  license.rst  simple_example.rst
docs/source/: FunctionArray.rst  axes.rst  beginner_guide.rst  check_optimizations.rst  compress.rst  concepts.rst  conf.py  convolve.rst  coordinates.rst  correlate.rst  debug_array.rst  features.rst  gc.rst  get_xp.rst  image.rst  img_autocorr.rst  img_convolve.rst  img_convolve1d.rst  img_correlate.rst  img_correlate1d.rst  img_crosscorr.rst  img_fft.rst  img_gaussianfilter.rst  img_greyopening.rst  img_ifft.rst  img_maxifilter.rst  img_minifilter.rst  img_radialproj.rst  img_transform.rst  img_wiener.rst  index.rst  install.rst  kernel.rst  matplotlib.rst  modules.rst  nb_threads.rst  ndimage.rst  parallel_array.rst  quicky.rst  reference_guide.rst  (+37 more)
src/arrlp/: __init__.py  modules.json
src/arrlp/modules/: __template__.py  __template_axes__.py  _template.py  _template_base.py  _template_wrapper.py
src/arrlp/modules/FunctionArray_LP/: FunctionArray.py  test_FunctionArray.py
src/arrlp/modules/axes_LP/: axes.py  test_axes.py
src/arrlp/modules/check_optimizations_LP/: check_optimizations.py  test_check_optimizations.py
src/arrlp/modules/compress_LP/: compress.py
src/arrlp/modules/coordinates_LP/: coordinates.py  test_coordinates.py
src/arrlp/modules/debug_array_LP/: debug_array.py  test_debug_array.py
(+83 files in other folders)
